# clipable

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
clipable/: cli.py  clipboard.py  converter.py  watcher.py
tests/: test_clipable.py
