[project]
name = "clipable"
version = "0.3.0"
description = "Convert clipboard spreadsheet data to Markdown table"
authors = [
    {name = "yujikawa"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "pyperclip>=1.8",
    "pytablewriter>=1.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
clipable = "clipable.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
